--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
   </head>
   <body
-    class="font-body bg-white text-gray-900 dark:bg-gray-900 dark:text-gray-100"
+    class="font-body bg-white text-bark-900 dark:bg-gray-900 dark:text-gray-100"
   >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
