--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
       rel="stylesheet"
     />
   </head>
-  <body
-    class="font-body bg-white text-bark-900 dark:bg-gray-900 dark:text-gray-100"
-  >
+  <body class="antialiased text-gray-900">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
